# usaco-scraper

./: .gitignore  README.md  pyproject.toml
usaco_scraper/: __main__.py
