[tool.poetry]
name = "usaco-scraper"
version = "0.1.0"
description = ""
authors = ["ThatXliner <bryan.hu.2020@gmail.com>"]
readme = "README.md"
packages = [{include = "usaco_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
attrs = "*"  # Attrs follows CalVer
unmarkd = "^1.1.1"


[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.5"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
